--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,14 @@ server:
   port: 8080
   servlet:
     context-path: /demo
+    #设置session的超时时间为1小时
+    session:
+      timeout: 60
+  tomcat:
+    uri-encoding: utf-8
+#指定错误跳转的url
+#  error:
+#    path: /error
 
 spring:
   datasource:
@@ -31,6 +39,20 @@ spring:
       #打开PSCache，并指定每个连接上PSCache的大小。oracle设为true，mysql设为false。分库分表较多推荐设置为false
       pool-prepared-statements: false
       max-pool-prepared-statement-per-connection-size: 20
+
+  #freemarker静态资源配置
+  freemarker:
+    #设定ftl文件路径
+    template-loader-path: classpath:/templates
+    #关闭缓存， 及刷新，时 上线生产环境需要改为true
+    cache: false
+    charset: UTF-8
+    check-template-location: true
+    content-type: text/html
+    expose-request-attributes: true
+    expose-session-attributes: true
+    request-context-attribute: request
+    suffix: .ftl
 
 ## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
 mybatis:
