--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8080
   servlet:
-    context-path: /demo
+    context-path: /springbootdemo
     #设置session的超时时间为1小时
     session:
       timeout: 60
@@ -53,6 +53,8 @@ spring:
     expose-session-attributes: true
     request-context-attribute: request
     suffix: .ftl
+  mvc:
+    static-path-pattern: /static/**
 
 ## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
 mybatis:
